--- a/client/style.css
+++ b/client/style.css
@@ -2,3 +2,45 @@ html, body {
   padding: 0;
   margin: 0;
 }
+
+#killed {
+  position: fixed;
+  z-index: 2;
+  background: none;
+  top: 0;
+  margin-left: auto;
+  margin-right: auto;
+  text-align: center;
+}
+
+#load {
+  position: fixed;
+  left: 50px;
+  top: 50vh;
+  width: calc(100vw - 100px);
+  height: 15px;
+  background-color: gray;
+  border: 1px solid #404040;
+  -webkit-appearance: none;
+  appearance: none;
+  z-index: 2;
+  border-radius: 2px;
+}
+
+#load::-webkit-progress-bar {
+  box-shadow: 0 2px 10px #333 inset;
+}
+
+#load::-webkit-progress-value {
+  background-color: #4d79ff;
+  border-radius: 2px;
+  box-shadow: 0 2px 5px rgba(255, 255, 255, 0.3) inset;
+}
+
+#load-container {
+  position: fixed;
+  z-index: 2;
+  background: rgba(0,0,0,0.7);
+  width: 100vw;
+  height: 100vh;
+}
